--- a/www-hakyll/posts/2020-07-17-plugs-out.rst
+++ b/www-hakyll/posts/2020-07-17-plugs-out.rst
@@ -8,11 +8,20 @@ or fuel from all cables and umbilicals?
 
 As part of my debugging efforts I have written some simple plugins that
 demonstrate some things about type checker plugins. These I've collected into
-a package, ghc-plugs-out. It is a multiple library package, each library is a
+a package, `ghc-plugs-out`_. It is a multiple library package, each library is a
 plugin. The test suites in the package each demonstrate something.
 
 The undefined plugins show that GHC will panic if a type checker plugin is
-not well behaved.
+not well behaved. There's one of these for each of the three functions a type
+checker plugin must implement.
+
+.. code-block:: haskell
+
+    TcPlugin
+        { tcPluginInit = return ()
+        , tcPluginSolve = \_ _ _ _ -> undefined
+        , tcPluginStop = const $ return ()
+        }
 
 .. code-block:: bash
 
@@ -21,3 +30,5 @@ not well behaved.
     [1 of 1] Compiling Main
     ghc: panic! (the 'impossible' happened)
     Please report this as a GHC bug:  http://www.haskell.org/ghc/reportabug
+
+.. _ghc-plugs-out: https://github.com/BlockScope/ghc-plugs-out
