Switch to container from container-fluid.

--- a/www-hakyll/posts/2020-07-17-plugs-out.rst
+++ b/www-hakyll/posts/2020-07-17-plugs-out.rst
@@ -1,5 +1,5 @@
 ---
-title: Plugs Out Testing
+title: Plugs Out
 tags: haskell, type checker plugins
 ---
 When getting ready to launch a human-rated spacecraft, one of the steps is
