--- a/www-hakyll/posts/2020-07-17-plugs-out.rst
+++ b/www-hakyll/posts/2020-07-17-plugs-out.rst
@@ -1,5 +1,7 @@
 ---
 title: Plugs Out
+subtitle: Type checker plugins without the type checking.
+slug: Type checker plugins without the type checking.
 tags: haskell, type checker plugins
 ---
 When getting ready to launch a human-rated spacecraft, one of the steps is
