Change the tag to tcplugins.

--- a/www-hakyll/drafts/2020-07-17-plugs-out.rst
+++ b/www-hakyll/drafts/2020-07-17-plugs-out.rst
@@ -2,7 +2,7 @@
 title: Plugs Out
 subtitle: Type checker plugins without the type checking.
 slug: Type checker plugins without the type checking.
-tags: haskell, type checker plugins
+tags: haskell, tcplugins
 ---
 When getting ready to launch a human-rated spacecraft, one of the steps is
 the plugs-out test. Can the the spacecraft function on its own without power
