--- a/www-hakyll/drafts/2020-07-08-plugs-out.rst
+++ b/www-hakyll/drafts/2020-07-08-plugs-out.rst
@@ -62,9 +62,9 @@ a pragma, only in source files that need the plugin.
 
 .. code-block:: pre
 
-  > cabal build test-wireup-pure-by-pragma
-  [1 of 1] Compiling Main
-  >>> GHC-TcPlugin #1
+    > cabal build test-wireup-pure-by-pragma
+    [1 of 1] Compiling Main
+    >>> GHC-TcPlugin #1
 
 A plugin can also be wired up with an option, say in a cabal file. This is
 probably fine if all your modules need a plugin.
@@ -81,43 +81,92 @@ probably fine if all your modules need a plugin.
 
 .. code-block:: pre
 
-  > cabal build test-wireup-pure-by-option
-  [1 of 1] Compiling Main
-  >>> GHC-TcPlugin #1
+    > cabal build test-wireup-pure-by-option
+    [1 of 1] Compiling Main
+    >>> GHC-TcPlugin #1
 
 If you mix and match both ways of doing the wiring you'll end up with two
 instances of the plugin in the compilation.
 
 .. code-block:: pre
 
-  > cabal build test-wireup-pure-by-both
-  [1 of 1] Compiling Main
-  >>> GHC-TcPlugin #1
-  >>> GHC-TcPlugin #1
+    > cabal build test-wireup-pure-by-both
+    [1 of 1] Compiling Main
+    >>> GHC-TcPlugin #1
+    >>> GHC-TcPlugin #1
 
 If your plugin is impure, it's going to force a recompilation.
 
 .. code-block:: pre
 
-  > cabal build test-wireup-impure-by-pragma
-  [1 of 1] Compiling Main
-  >>> GHC-TcPlugin #1
-  [1 of 1] Compiling Main [Impure plugin forced recompilation]
-  >>> GHC-TcPlugin #1
+    > cabal build test-wireup-impure-by-pragma
+    [1 of 1] Compiling Main
+    >>> GHC-TcPlugin #1
+    [1 of 1] Compiling Main [Impure plugin forced recompilation]
+    >>> GHC-TcPlugin #1
 
-  > cabal build test-wireup-impure-by-option
-  [1 of 1] Compiling Main
-  >>> GHC-TcPlugin #1
-  [1 of 1] Compiling Main [Impure plugin forced recompilation]
-  >>> GHC-TcPlugin #1
+    > cabal build test-wireup-impure-by-option
+    [1 of 1] Compiling Main
+    >>> GHC-TcPlugin #1
+    [1 of 1] Compiling Main [Impure plugin forced recompilation]
+    >>> GHC-TcPlugin #1
 
-  > cabal build test-wireup-impure-by-both
-  [1 of 1] Compiling Main
-  >>> GHC-TcPlugin #1
-  >>> GHC-TcPlugin #1
-  [1 of 1] Compiling Main [Impure plugin forced recompilation]
-  >>> GHC-TcPlugin #1
-  >>> GHC-TcPlugin #1
+    > cabal build test-wireup-impure-by-both
+    [1 of 1] Compiling Main
+    >>> GHC-TcPlugin #1
+    >>> GHC-TcPlugin #1
+    [1 of 1] Compiling Main [Impure plugin forced recompilation]
+    >>> GHC-TcPlugin #1
+    >>> GHC-TcPlugin #1
+
+Modularity
+----------
+GHC compiles modules. We see the counter plugin is called on twice when
+functions ``foo`` and ``bar`` are in module ``Main``.
+
+.. code-block:: haskell
+
+    {-# OPTIONS_GHC -fplugin CallCount.Pure.Plugin #-}
+
+    module Main where
+
+    foo :: IO a
+    foo = undefined
+
+    bar :: IO a
+    bar = undefined
+
+    main :: IO ()
+    main = return ()
+
+.. code-block:: pre
+
+    > cabal build test-counter-main
+    [1 of 1] Compiling Main
+    >>> GHC-TcPlugin #1
+    >>> GHC-TcPlugin #2
+
+Moving ``foo`` and ``bar`` to module ``FooBar`` and the counter plugin reports
+two calls again.
+
+.. code-block:: pre
+
+    > cabal build test-counter-foobar-main
+    [1 of 2] Compiling FooBar
+    >>> GHC-TcPlugin #1
+    >>> GHC-TcPlugin #2
+    [2 of 2] Compiling Main
+
+Move these functions into separate modules and we count one call for each module.
+
+.. code-block:: pre
+
+    > cabal build test-counter-foo-bar-main
+    [1 of 3] Compiling Bar
+    >>> GHC-TcPlugin #1
+    [2 of 3] Compiling Foo
+    >>> GHC-TcPlugin #1
+    [3 of 3] Compiling Main
 
 Undefined is not a Function
 ---------------------------
@@ -177,7 +226,7 @@ Care Free
 
 Type checker plugins are of course called on by GHC to resolve constraints.
 Some need solving and others don't. GHC knows that it can get an ``a`` from
-``undefined`` but maybe a plugin can do better so here we get called.
+``undefined`` but maybe a plugin can do better so we get called.
 
 .. code-block:: haskell
 
@@ -223,9 +272,12 @@ its init and stop functions are **always** called.
 
 Takeaways
 _________
-We should wire up plugins with pragmas only in modules that need it. Don't
-forget to flag pure plugins as such. If GHC doesn't need help resolving
-constraints then it won't call out to your plugin.
+
+* We should wire up type checker plugins with pragmas only in modules that need
+  it.
+* Don't forget to flag pure plugins as such.
+* If GHC doesn't need help resolving constraints then it won't call out to your plugin.
+* Modules are the units of compilation.
 
 .. _ghc-plugs-out: https://github.com/BlockScope/ghc-plugs-out
 
